Improve RemoteStoreReplicationSourceTests, remove unnecessary mocks and use actual failures for failure/exception use cases
Signed-off-by: Suraj Singh <surajrider@gmail.com>